build a native image